--- a/sertanejo.html
+++ b/sertanejo.html
@@ -13,13 +13,17 @@
 <body>
 
 
-    
+  <p>No dia em que eu saí de casa
+    Minha mãe me disse:
+    filho, vem cá
+  </p>
+  <p>Passou a mão em
+    meus cabelos
+    Olhou em meus olhos,
+    começou falar</p>
 
 
 
 </body>
-
-
-
 
 </html>
