--- a/sertanejo.html
+++ b/sertanejo.html
@@ -1,28 +1,34 @@
 <!DOCTYPE HTML>
 
-<html lang=”pt-br”>
+<html lang="pt-br">
 
 <head>
-
   <meta charset=”UTF-8”>
-
   <title>No dia em que eu sai de casa</title>
-
 </head>
 
 <body>
 
-
-  <p>No dia em que eu saí de casa
-    Minha mãe me disse:
-    filho, vem cá
+  <p>
+    No dia em que eu saí de casa</br>
+    Minha mãe me disse: <b>filho, vem cá</b>
   </p>
-  <p>Passou a mão em
-    meus cabelos
-    Olhou em meus olhos,
-    começou falar</p>
 
+  <br>
+  Passou a mão em </br>
+  meus cabelos</br>
+  Olhou em meus olhos,</br>
+  começou falar</br>
+  </p>
 
+  <p>
+    Por onde você for eu sigo</br>
+    Com meu pensamento</br>
+    Sempre onde estiver</br>
+    Em minhas orações</br>
+    Eu vou pedir a Deus</br>
+    <b>Que ilumine os passos seus</b></br>
+  </p>
 
 </body>
 
