Adicionando quarta estrofe

--- a/sertanejo.html
+++ b/sertanejo.html
@@ -30,6 +30,14 @@
     <b>Que ilumine os passos seus</b></br>
   </p>
 
+  <p>
+    Eu sei que ela nunca compreendeu</br>
+    Os meus motivos de sair de lá</br>
+    Mas ela sabe que depois que cresce</br>
+    O filho vira passarinho e quer voar</br>
+  </p>
+
+
 </body>
 
 </html>
