--- a/sertanejo.html
+++ b/sertanejo.html
@@ -38,6 +38,20 @@
   </p>
 
 
+  <p>
+    Eu bem queria</br>
+    Continuar ali</br>
+    Mas o destino</br>
+    Quis me contrariar</br>
+    E o olhar</br>
+    De minha mãe na porta</br>
+    Eu deixei chorando</br>
+    A me abençoar</br>
+
+
+  </p>
+
+
 </body>
 
 </html>
