--- a/sertanejo.html
+++ b/sertanejo.html
@@ -47,9 +47,25 @@
     De minha mãe na porta</br>
     Eu deixei chorando</br>
     A me abençoar</br>
+ </p>
+
+ <p>
+  A minha mãe naquele dia</br>
+  Me falou do mundo como ele é</br>
+  Parece que ela conhecia</br>
+  Cada pedra que eu iria</br>
+  Pôr o pé</br>
+  E sempre ao lado do meu pai</br>
+  Da pequena cidade</br>
+  Ela jamais saiu</br>
+  Ela me disse assim:</br>
+  Meu filho vá com Deus</br>
+  Que este mundo inteiro é seu</br>
 
 
-  </p>
+
+
+ </p>
 
 
 </body>
