--- a/sertanejo.html
+++ b/sertanejo.html
@@ -61,6 +61,19 @@
   Ela me disse assim:</br>
   Meu filho vá com Deus</br>
   Que este mundo inteiro é seu</br>
+ </p>
+
+ <p>
+  Eu sei que ela</br>
+  Nunca compreendeu</br>
+  Os meus motivos</br>
+  De sair de lá,</br>
+  Mas ela sabe</br>
+  Que depois que cresce</br>
+  O filho vira passarinho</br>
+  E quer voar</br>
+
+
 
 
 
