--- a/sertanejo.html
+++ b/sertanejo.html
@@ -72,13 +72,27 @@
   Que depois que cresce</br>
   O filho vira passarinho</br>
   E quer voar</br>
-
-
-
-
-
-
  </p>
+
+
+ <p>
+  Eu bem queria</br>
+  Continuar ali</br>
+  Mas o destino</br>
+  Quis me contrariar</br>
+  E o olhar</br>
+  De minha mãe na porta</br>
+  Eu deixei chorando</br>
+  A me abençoar</br>
+  E o olhar</br>
+  De minha mãe na porta</br>
+  Eu deixei chorando</br>
+  A me abençoar</br>
+  E o olhar</br>
+  De minha mãe na porta</br>
+  Eu deixei chorando</br>
+  A me abençoar</br>
+</p>
 
 
 </body>
