--- a/sertanejo.html
+++ b/sertanejo.html
@@ -4,14 +4,16 @@
 
 <head>
   <meta charset=”UTF-8”>
-  <title>No dia em que eu sai de casa</title>
+  <title>No dia em que eu saí de casa</title>
 </head>
 
 <body>
-
+  
+  <h1>No dia em que eu saí de casa</h1>
+  <h4>letra </h4>
   <p>
     No dia em que eu saí de casa</br>
-    Minha mãe me disse: <b>filho, vem cá</b>
+    Minha mãe me disse: filho, vem cá</b>
   </p>
 
   <br>
@@ -27,7 +29,7 @@
     Sempre onde estiver</br>
     Em minhas orações</br>
     Eu vou pedir a Deus</br>
-    <b>Que ilumine os passos seus</b></br>
+    Que ilumine os passos seus</br>
   </p>
 
   <p>
@@ -37,6 +39,7 @@
     O filho vira passarinho e quer voar</br>
   </p>
 
+  <iframe> width="853" height="480" src="https://www.youtube.com/watch?v=5ukX7atxjeI"  allowfullscreen</iframe>
 
 </body>
 
