--- a/sertanejo.html
+++ b/sertanejo.html
@@ -39,7 +39,11 @@
     O filho vira passarinho e quer voar</br>
   </p>
 
-  <<iframe width="560" height="315" src="https://www.youtube.com/embed/5ukX7atxjeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe> width="853" height="480" src="https://www.youtube.com/watch?v=5ukX7atxjeI"  allowfullscreen</iframe>
+
+
+
+</body>
 
 </body>
 
