--- a/sertanejo.html
+++ b/sertanejo.html
@@ -10,6 +10,7 @@
 <body>
   
   <h1>No dia em que eu saí de casa</h1>
+  
   <h4>letra </h4>
   <p>
     No dia em que eu saí de casa</br>
@@ -38,12 +39,7 @@
     Mas ela sabe que depois que cresce</br>
     O filho vira passarinho e quer voar</br>
   </p>
-
-  <iframe> width="853" height="480" src="https://www.youtube.com/watch?v=5ukX7atxjeI"  allowfullscreen</iframe>
-
-
-
-</body>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/5ukX7atxjeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 
