--- a/sertanejo.html
+++ b/sertanejo.html
@@ -9,19 +9,25 @@
 
 <body>
 
+  <div class="estrofe">
   <p>
     No dia em que eu saí de casa</br>
-    Minha mãe me disse: <b>filho, vem cá</b>
+    Minha mãe me disse: <b>filho, vem cá</br>
   </p>
+</div>
 
-  <br>
+<div class="estrofe">
+
   Passou a mão em </br>
   meus cabelos</br>
   Olhou em meus olhos,</br>
   começou falar</br>
+  
   </p>
+</div>
 
-  <p>
+<div class="estrofe">
+<p>
     Por onde você for eu sigo</br>
     Com meu pensamento</br>
     Sempre onde estiver</br>
@@ -29,6 +35,9 @@
     Eu vou pedir a Deus</br>
     <b>Que ilumine os passos seus</b></br>
   </p>
+</div>
+
+<div class="estrofe">
 
   <p>
     Eu sei que ela nunca compreendeu</br>
@@ -37,6 +46,9 @@
     O filho vira passarinho e quer voar</br>
   </p>
 
+</div>
+
+<div class="estrofe">
 
   <p>
     Eu bem queria</br>
@@ -48,7 +60,9 @@
     Eu deixei chorando</br>
     A me abençoar</br>
  </p>
+</div>
 
+<div class="estrofe"></div>
  <p>
   A minha mãe naquele dia</br>
   Me falou do mundo como ele é</br>
@@ -62,6 +76,9 @@
   Meu filho vá com Deus</br>
   Que este mundo inteiro é seu</br>
  </p>
+</div>
+
+<div class="estrofe"></div>
 
  <p>
   Eu sei que ela</br>
@@ -73,7 +90,9 @@
   O filho vira passarinho</br>
   E quer voar</br>
  </p>
+</div>
 
+<div class="estrofe"></div>
 
  <p>
   Eu bem queria</br>
@@ -93,6 +112,7 @@
   Eu deixei chorando</br>
   A me abençoar</br>
 </p>
+</div>
 
 
 </body>
