--- a/sertanejo.html
+++ b/sertanejo.html
@@ -3,40 +3,35 @@
 <html lang="pt-br">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="estilos/style.css"/>
   <meta charset=”UTF-8”>
   <title>No dia em que eu saí de casa</title>
 </head>
 
 <body>
 
-  
-  <h1>No dia em que eu saí de casa</h1>
- 
-   <div class="musica">
-    <h1>Zezé de Camargo e Luciano</h1>
+  <div class="musica">
+    <h1>No dia em que eu saí de casa</h1>
   </div>
+   
+   <div class="cantor">
+    <h1>Zezé de Camargo e Luciano</h1>
+   </div>
   
-  <h4>letra </h4>
+  <h2>Letra: </h2>
 
-  <div class="estrofe">
+  <div class="estrofe1">
   <p>
-    No dia em que eu saí de casa</br>
-    Minha mãe me disse: <b>filho, vem cá</br>
-
-  </p>
-</div>
-
-<div class="estrofe">
-
-  Passou a mão em </br>
-  meus cabelos</br>
-  Olhou em meus olhos,</br>
-  começou falar</br>
+    <b>No dia em que eu saí de casa</br>
+    Minha mãe me disse: filho, vem cá</br>
+    Passou a mão em meus cabelos</br>
+    Olhou em meus olhos,</br>
+    Começou falar</br>
   
   </p>
 </div>
 
-<div class="estrofe">
+<div class="estrofe2">
 <p>
     Por onde você for eu sigo</br>
     Com meu pensamento</br>
@@ -47,7 +42,7 @@
   </p>
 </div>
 
-<div class="estrofe">
+<div class="estrofe3">
 
   <p>
     Eu sei que ela nunca compreendeu</br>
@@ -56,11 +51,10 @@
     O filho vira passarinho e quer voar</br>
   </p>
 
-  
-
 </div>
 
-<div class="estrofe">
+
+<div class="estrofe4">
 
   <p>
     Eu bem queria</br>
@@ -74,7 +68,7 @@
  </p>
 </div>
 
-<div class="estrofe"></div>
+<div class="estrofe5"></div>
  <p>
   A minha mãe naquele dia</br>
   Me falou do mundo como ele é</br>
@@ -90,7 +84,7 @@
  </p>
 </div>
 
-<div class="estrofe"></div>
+<div class="estrofe6"></div>
 
  <p>
   Eu sei que ela</br>
@@ -104,7 +98,7 @@
  </p>
 </div>
 
-<div class="estrofe"></div>
+<div class="estrofe7"></div>
 
  <p>
   Eu bem queria</br>
