--- a/sertanejo.html
+++ b/sertanejo.html
@@ -18,16 +18,18 @@
     <h1>Zezé de Camargo e Luciano</h1>
    </div>
   
+<div class="letra">
   <h2>Letra: </h2>
+<div/>
 
   <div class="estrofe1">
   <p>
-    <b>No dia em que eu saí de casa</br>
+    No dia em que eu saí de casa</br>
     Minha mãe me disse: filho, vem cá</br>
     Passou a mão em meus cabelos</br>
     Olhou em meus olhos,</br>
     Começou falar</br>
-  
+  <b>
   </p>
 </div>
 
@@ -68,7 +70,7 @@
  </p>
 </div>
 
-<div class="estrofe5"></div>
+<div class="estrofe5">
  <p>
   A minha mãe naquele dia</br>
   Me falou do mundo como ele é</br>
@@ -84,7 +86,7 @@
  </p>
 </div>
 
-<div class="estrofe6"></div>
+<div class="estrofe6">
 
  <p>
   Eu sei que ela</br>
@@ -98,7 +100,7 @@
  </p>
 </div>
 
-<div class="estrofe7"></div>
+<div class="estrofe7">
 
  <p>
   Eu bem queria</br>
@@ -120,7 +122,9 @@
 </p>
 </div>
 
+<div class="video">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5ukX7atxjeI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div/>
 
 </body>
 
