--- a/sertanejo.html
+++ b/sertanejo.html
@@ -8,7 +8,8 @@
   <title>No dia em que eu saí de casa</title>
 </head>
 
-<body>
+<body bgcolor="Grey"> 
+
 
   <div class="musica">
     <h1>No dia em que eu saí de casa</h1>
